data/derived/comb/progs/unify/prog4536.ml.out
Characters 15-24:
  let _ = bigMul [9;9;9;9] [9;9;9;9];;
                 ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
